--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "repository": "#",
-  "license": "UNLICENSED",
+    "license": "UNLICENSED",
   "scripts": {
     "build": "webpack --config ./bundler/webpack.prod.js",
     "dev": "webpack serve --config ./bundler/webpack.dev.js",
@@ -10,17 +10,26 @@
     "@babel/core": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
     "babel-loader": "^8.2.3",
+    "body-parser": "^1.20.2",
     "cannon": "^0.6.2",
+    "child_process": "^1.0.2",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^9.0.1",
+    "cors": "^2.8.5",
     "css-loader": "^6.5.0",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "file-loader": "^6.2.0",
+    "gtts": "^0.2.1",
     "html-loader": "^3.0.0",
     "html-webpack-plugin": "^5.5.0",
     "lil-gui": "^0.11.0",
     "mini-css-extract-plugin": "^2.4.3",
+    "module": "^1.2.5",
+    "openai": "^3.2.1",
     "portfinder-sync": "0.0.2",
     "raw-loader": "^4.0.2",
+    "say": "^0.16.0",
     "style-loader": "^3.3.1",
     "three": "^0.134.0",
     "vercel": "^23.1.2",
